# GenomeSeq_MemoraDB

./: .gitignore  CMakeLists.txt  FindCheck.cmake  README.md  install_check.sh  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
Backend/: CMakeLists.txt  FindCheck.cmake  README.md  app.py  connect.py
Backend/client/: CMakeLists.txt  main.c
Backend/lib/: CMakeLists.txt  memora.c  memora.h
Backend/route/: biopython
Backend/server/: CMakeLists.txt  main.c  memora_server.c  memora_server.h
Backend/server/examples/: example1.c
Backend/tests/: CMakeLists.txt  memora_client_test.c  memora_lib_test.c  memora_server_test.c
client/: CMakeLists.txt  connect.py  main.c  test.py  writeIntoDatabase.py
lib/: CMakeLists.txt  biopython.py  memora.c  memora.h
server/: CMakeLists.txt  main.c  memora_server.c  memora_server.h
server/examples/: example1.c
src/: App.vue  Ensemble-Rest.js  biopython.py
src/Json/: consequences-data(1).json  mutations.2023-03-26.json
src/assets/: main.css
src/components/: Navigation.vue
src/router/: index.js
src/views/: AlleleData.vue  Dashboard.vue  Ensemble.vue  TestApiCalls.vue  TokenLibs.txt  TokenLibs.vue
tests/: CMakeLists.txt  memora_client_test.c  memora_lib_test.c  memora_server_test.c
